src/main/resources/devops/k8s_aws/mySql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: yoogeshmysql
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: yoogeshmysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        volumeMounts:
          - name: yoogesh-mysql-persistence
            mountPath: /var/lib/mysql
      volumes:
        - name: yoogesh-mysql-persistence
          # pointer to the configuration of HOW we want the mount to be implemented
          persistentVolumeClaim:
            claimName: yoogesh-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: yoogesh-database
spec:
  selector:
    app: yoogeshmysql
  ports:
  - port: 3306
  type: ClusterIP
