src/main/resources/devops/k8s_aws/ingress.yaml
# from version 2.24 of k8s [You can check the current version using 'kubectl version']
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-routing
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: mycredentials
    nginx.ingress.kubernetes.io/auth-realm: "Warning: Only the Administrator can use this link"
spec:
  rules:
    - host: fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: twm-webapp
              servicePort: 80
