src/main/resources/devops/k8s_aws/ingress_fleetman.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: webapp
  
spec:
  selector:
    matchLabels:
      mylabelName: yoogeshWebapp
      
  replicas: 1
  
  template:
    metadata:
      name: webapp
      labels:
        mylabelName: yoogeshWebapp
    spec:
      containers:
      - name: webapp
        image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5

---

apiVersion: v1
kind: Service

metadata:
  name: fleetman-webapp
  
spec:
 selector:
   mylabelName: yoogeshWebapp
   
 ports:
   - name: http
     port: 80
     targetPort: 8080
     
 type: LoadBalancer
 
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress

metadata:
  name: basic-routing
    
spec:
  rules:
    - host: fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-webapp
              servicePort: 80
