src/main/resources/devops/k8s_aws/ingress_httpd.yaml
apiVersion: networking.k8s.io/v1beta1

kind: Ingress

metadata:
  name: basic-routing

spec:
  rules:
    - host: fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-httpd-cluster
              servicePort: 80
